--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,68 +5,115 @@ on:
     branches:
       - main
 
+env:
+  INSTANCE_ID: i-0515980dba1b663a2
+  EC2_IP: 54.75.16.21
+  AWS_REGION: eu-west-1
+
 jobs:
-  deploy:
+  configurar-aws:
+    name: 🧰 Configurar credenciales AWS
     runs-on: ubuntu-latest
 
     steps:
-
-      - name: Configurar credenciales AWS
+      - name: Configurar AWS
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-1
+          aws-region: ${{ env.AWS_REGION }}
 
-      - name: Iniciar instancia EC2 solo si está detenida
-        run: |
-          INSTANCE_ID=i-0515980dba1b663a2
-          STATE=$(aws ec2 describe-instances \
-            --instance-ids $INSTANCE_ID \
-            --query "Reservations[0].Instances[0].State.Name" \
-            --output text)
-        
-          echo "Estado actual: $STATE"
-        
-          if [ "$STATE" = "stopped" ]; then
-            echo "La instancia está detenida. Iniciando..."
-            aws ec2 start-instances --instance-ids $INSTANCE_ID
-            echo "Esperando a que esté en estado 'running'..."
-            aws ec2 wait instance-running --instance-ids $INSTANCE_ID
-          elif [ "$STATE" = "stopping" ]; then
-            echo "La instancia se está deteniendo. Esperando que se detenga..."
-            aws ec2 wait instance-stopped --instance-ids $INSTANCE_ID
-            echo "Ahora iniciando..."
-            aws ec2 start-instances --instance-ids $INSTANCE_ID
-            aws ec2 wait instance-running --instance-ids $INSTANCE_ID
-          elif [ "$STATE" = "pending" ]; then
-            echo "La instancia se está iniciando. Esperando que esté en 'running'..."
-            aws ec2 wait instance-running --instance-ids $INSTANCE_ID
-          else
-            echo "La instancia ya está en estado '$STATE'."
-          fi
- 
-      - name: Checkout este repositorio
-        uses: actions/checkout@v3
+  generar-clave:
+    name: 🔐 Generar clave SSH
+    runs-on: ubuntu-latest
 
+    steps:
       - name: Crear archivo de clave privada
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > ec2_key.pem
           chmod 600 ec2_key.pem
 
+      - name: Subir clave como artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ec2_key
+          path: ec2_key.pem
+
+  preparar-entorno:
+    name: 🚀 Iniciar instancia EC2
+    runs-on: ubuntu-latest
+    needs: [configurar-aws, generar-clave]
+
+    steps:
+      - name: Iniciar instancia si es necesario
+        run: |
+          STATE=$(aws ec2 describe-instances \
+            --instance-ids $INSTANCE_ID \
+            --query "Reservations[0].Instances[0].State.Name" \
+            --output text)
+
+          echo "Estado actual: $STATE"
+
+          if [ "$STATE" = "stopped" ]; then
+            aws ec2 start-instances --instance-ids $INSTANCE_ID
+            aws ec2 wait instance-running --instance-ids $INSTANCE_ID
+          elif [ "$STATE" = "stopping" ]; then
+            aws ec2 wait instance-stopped --instance-ids $INSTANCE_ID
+            aws ec2 start-instances --instance-ids $INSTANCE_ID
+            aws ec2 wait instance-running --instance-ids $INSTANCE_ID
+          elif [ "$STATE" = "pending" ]; then
+            aws ec2 wait instance-running --instance-ids $INSTANCE_ID
+          fi
+
+  clonar-repo:
+    name: 🧬 Clonar repositorio si no existe
+    runs-on: ubuntu-latest
+    needs: [preparar-entorno, generar-clave]
+
+    steps:
+      - name: Descargar clave
+        uses: actions/download-artifact@v3
+        with:
+          name: ec2_key
+
+      - name: Checkout repositorio actual
+        uses: actions/checkout@v3
+
       - name: Clonar repositorio en EC2
         run: |
-          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ec2-user@54.75.16.21 'bash -s' < ./scripts/clone_repo.sh
-        
-      - name: Ejecutar hola mundo en EC2
-        run: |
-          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ec2-user@54.75.16.21 'bash -s' < ./scripts/say_hello.sh
+          chmod 600 ec2_key.pem
+          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ec2-user@$EC2_IP << 'EOF'
+            if [ ! -d "$HOME/terraform" ]; then
+              git clone https://github.com/Jose26Madrid/terraform.git ~/terraform
+            else
+              echo "El proyecto ya existe. No se clona."
+            fi
+          EOF
 
-      - name: Detener instancia al finalizar
-        if: always()
+  ejecutar-hola:
+    name: 💬 Ejecutar Hola Mundo en EC2
+    runs-on: ubuntu-latest
+    needs: [clonar-repo, generar-clave]
+
+    steps:
+      - name: Descargar clave
+        uses: actions/download-artifact@v3
+        with:
+          name: ec2_key
+
+      - name: Ejecutar script hola mundo
         run: |
-          INSTANCE_ID=i-0515980dba1b663a2
-          echo "Deteniendo instancia..."
+          chmod 600 ec2_key.pem
+          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ec2-user@$EC2_IP 'bash -s' < ./scripts/say_hello.sh
+
+  detener-instancia:
+    name: 🛑 Detener instancia EC2
+    runs-on: ubuntu-latest
+    needs: [ejecutar-hola, configurar-aws]
+
+    steps:
+      - name: Detener instancia
+        run: |
           aws ec2 stop-instances --instance-ids $INSTANCE_ID
           aws ec2 wait instance-stopped --instance-ids $INSTANCE_ID
-          echo "Instancia detenida correctamente."    
+          echo "Instancia detenida correctamente."
