--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,9 @@ name: Deploy to EC2
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - '*'  # Esto significa: "cualquier tag"
+      
 
 env:
   INSTANCE_ID: i-0515980dba1b663a2
