--- a/config/config.properties
+++ b/config/config.properties
@@ -1,1 +1,9 @@
+# URL del repositorio a clonar
 REPO_URL=https://github.com/Jose26Madrid/terraform.git
+
+# Control de ejecución de Terraform
+# Valores posibles:
+#   true  -> ejecuta terraform init + apply
+#   false -> ejecuta terraform destroy
+#   vacío o no definido -> no hace nada
+install=''
