Prueba de crear recursos.

--- a/config/config.properties
+++ b/config/config.properties
@@ -6,4 +6,4 @@ REPO_URL=https://github.com/Jose26Madrid/terraform.git
 #   true  -> ejecuta terraform init + apply
 #   false -> ejecuta terraform destroy
 #   vacío o no definido -> no hace nada
-install='true'
+install=true
