--- a/config/config.properties
+++ b/config/config.properties
@@ -7,3 +7,7 @@ REPO_URL=https://github.com/Jose26Madrid/terraform.git
 #   false -> ejecuta terraform destroy
 #   vacío o no definido -> no hace nada
 install=''
+
+# MIT License
+# Copyright (c) 2025 Jose Magariño
+# See LICENSE file for more details.
